# MovieRec

./: .env_sample  README.md  app.py  engine.py  lightfm.ipynb  main.py  pyproject.toml  requirements.txt  reviews.txt  scraper.py
EDA/: feature_eng.ipynb
api/: api.py  tmdb.py
data/: EDA.ipynb  api.py  data_preprocessing.py
models/: model.py
recommenders/: knn.py  lfm.ipynb  lfm.py  lightfm.ipynb  movieId.ipynb
scripts/: KNN_recommender.py
src/: app.py
src/templates/: index.html
static/: styles.css
templates/: index.html
