[project]
name = "movierec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "fastapi-cli>=0.0.7",
    "jinja2>=3.1.4",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
]
